Сделал изменения в задаче BJS2-34824